--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,7 @@
 <% else %>
 
   <%= link_to "Sign Up", new_user_path %><br>
-  <%= link_to "Sign In", login_path %>
+  <%= link_to "Sign In", login_path %><br>
+  <%= link_to("Login via Facebook", '/auth/facebook') %>
 
 <% end %>
