--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,63 +1,2 @@
 <h1>Make a new Recipe</h1>
-
-<%= form_for(@recipe) do |f| %>
-  <%= f.hidden_field :user_id %>
-  <%= f.label :title%><br>
-  <%= f.text_field :title%><br>
-  <%= f.label "Approximate Cook Time (min)"%><br>
-  <%= f.number_field :time %><br><br>
-  <%= f.label :ingredients %><br>
-  <%= f.fields_for :ingredients, @recipe.ingredients.build do |ingredients_fields| %>
-    <%= ingredients_fields.label "New Ingredient:  " %>
-    <%= ingredients_fields.text_field :name, placeholder: "Ingredient Name" %>  -  
-      <%= ingredients_fields.fields_for :recipe_ingredients, @recipe.recipe_ingredients.build do |recipe_ingredient| %>
-        <%= recipe_ingredient.text_field :quantity, :placeholder => "Quantiy" %>  -  
-        <%= recipe_ingredient.text_field :direction, :placeholder => "Directions" %><br>
-    <% end %>
-  <% end %>
-  <br><br>
-  <%= f.label :categories %><br>
-  <%= f.collection_check_boxes(:category_ids, Category.all, :id, :name) %><br>
-  <%= f.fields_for :categories, @recipe.categories.build do |categories_fields| %>
-    <%= categories_fields.text_field :name, placeholder: "New Category" %><br />
-  <% end %><br><br>
-
-
-  <%#= f.fields_for :recipe_ingredients, @recipe.recipe_ingredients.build do |ingredient_fields| %>
-    <%#= ingredient_fields.collection_select(:ingredient, Ingredient.all, :id, :name, {prompt: 'Select Ingredient'}) %>
-    <%#= ingredient_fields.hidden_field :recipe_id, :value => @recipe.id %>
-    <%#= ingredient_fields.label "Quantity:  "%>
-    <%#= ingredient_fields.text_field :quantity %>
-    <%#= ingredient_fields.label "Directions: "%>
-    <%#= ingredient_fields.text_area :direction %>
-
-      <%#= ingredient_fields.collection_select(:ingredient, Ingredient.all, :id, :name, {prompt: 'Select Ingredient'}) %>
-    <%#= ingredient_fields.label "Quantity:  "%>
-    <%#= ingredient_fields.text_field :quantity %>
-    <%#= ingredient_fields.label "Directions: "%>
-    <%#= ingredient_fields.text_area :direction %>
-       <%#= ingredient_fields.collection_select(:ingredient, Ingredient.all, :id, :name, {prompt: 'Select Ingredient'}) %>
-    <%#= ingredient_fields.label "Quantity:  "%>
-    <%#= ingredient_fields.text_field :quantity %>
-    <%#= ingredient_fields.label "Directions: "%>
-    <%#= ingredient_fields.text_area :direction %>
-  <%# end %>
-
-  <%#= f.collection_check_boxes(:ingredient_attributes, Ingredient.all, :id, :name) do |i| %>
-    <%#= i.label(:"data-value" => i.value) { i.check_box + i.text } %>
-      <%#= fields_for i.object.recipe_ingredients.build do |r_i| %>
-        <%#= r_i.hidden_field :recipe_id, :value => "#{@recipe.id}" %>
-        <%#= r_i.hidden_field :ingredient_id %>
-        <%#= r_i.label :quantity%>
-        <%#= r_i.text_area :quantity %>
-      <%# end%>    
-  <%# end %>
-
-  <%# New Ingredient Text Field %>
-  
-
- 
-
-  <%= f.submit %>
-  
-<% end %>
+<%= render 'form', recipe: @recipe %>
