--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,11 +1,21 @@
-<%= form_for(@recipe) do |f| %>
+<%= form_for @recipe, :url => user_recipes_path(current_user) do |f| %>
   <%= f.hidden_field :user_id %>
   <%= f.label :title%><br>
   <%= f.text_field :title%><br>
   <%= f.label "Approximate Cook Time (min)"%><br>
   <%= f.number_field :time %><br><br>
+  <%= f.label :description %>
+  <%= f.text_area :description, cols: 40, rows: 6 %><br><br>
   <%= f.label :ingredients %><br>
   <%= f.fields_for :ingredients, recipe.ingredients.build do |ingredients_fields| %>
+    <%= ingredients_fields.label "New Ingredient:  " %>
+    <%= ingredients_fields.text_field :name, placeholder: "Ingredient Name" %>  -  
+      <%= ingredients_fields.fields_for :recipe_ingredients, recipe.recipe_ingredients.build do |recipe_ingredient| %>
+        <%= recipe_ingredient.text_field :quantity, :placeholder => "Quantiy" %>  -  
+        <%= recipe_ingredient.text_field :direction, :placeholder => "Directions" %><br>
+    <% end %>
+  <% end %>
+    <%= f.fields_for :ingredients, recipe.ingredients.build do |ingredients_fields| %>
     <%= ingredients_fields.label "New Ingredient:  " %>
     <%= ingredients_fields.text_field :name, placeholder: "Ingredient Name" %>  -  
       <%= ingredients_fields.fields_for :recipe_ingredients, recipe.recipe_ingredients.build do |recipe_ingredient| %>
