add additional attribute display tags on form

--- a/app/views/recipes/_recipes.html.erb
+++ b/app/views/recipes/_recipes.html.erb
@@ -1,10 +1,13 @@
 <%#= raise recipe.inspect %>
 <%# recipes.each do |recipe| %>
   <h3><%= link_to recipe.title, user_recipe_path(recipe.user, recipe) %></h3>
-  <%= recipe.time %>
+  <p><%= recipe.time %> Min</p>
+  <ul>
   <% recipe.recipe_ingredients.each do |recipe_ingredient| %>
-    <%= recipe_ingredient.ingredient.name %> -  <%= recipe_ingredient.quantity %>  <%="  -  ";  recipe_ingredient.direction unless nil%>
+    <li><%= recipe_ingredient.ingredient.name %> -  <%= recipe_ingredient.quantity %>  </li>
+  <li><%= recipe_ingredient.direction unless nil%></li>
   <% end %>
+  </ul>
   <br>
 <%# end %>
 
