add markup to recipe show page

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,1 +1,4 @@
 <h1><%= @recipe.title %></h1>
+
+<p> Approximate Cook Time:  <%= @recipe.time %> Min </p>
+<p><em> <%= @recipe.description %></em></p>
