--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,15 @@
 <% if current_user %>
 
   <%= current_user.name %>  -  
-  <%= link_to "Add A Recipe", new_user_recipe_path(current_user) %>  -  
-  <%= link_to "My Recipes", user_recipes_path(current_user) %>  -  
-  <%= link_to "All Recipes", recipes_path %>  -  
-  <%= link_to "Logout", logout_path, :method => 'delete' %>  -  
+  <%= link_to "Add A Recipe", new_user_recipe_path(current_user) %>   -   
+  <%= link_to "My Recipes", user_recipes_path(current_user) %>   -   
+  <%= link_to "All Recipes", recipes_path %>   -   
+  <%= link_to "Logout", logout_path, :method => 'delete' %>   -   
 
 <% else %>
 
-  <%= link_to "Sign Up", new_user_path %><br>
-  <%= link_to "Sign In", login_path %><br>
+  <%= link_to "Sign Up", new_user_path %>   -   
+  <%= link_to "Sign In", login_path %>.  -   
   <%= link_to("Login via Facebook", '/auth/facebook') %>
 
 <% end %>
