--- a/app/views/ingredients/_ingredient.html.erb
+++ b/app/views/ingredients/_ingredient.html.erb
@@ -1,9 +1,23 @@
+<!-- if @recipe.new_record?
+  f.fields_for :ingredients, recipe.ingredients do |ingredients_fields| 
+    ingredients_fields.text_field :name, placeholder: "Ingredient Name"   -  
+     ingredients_fields.fields_for :recipe_ingredients, recipe.recipe_ingredients.build do |recipe_ingredient| 
+       recipe_ingredient.text_field :quantity, :placeholder => "Quantity"   -  
+       recipe_ingredient.text_field :preparation, :placeholder => "Preparation" 
+    end
+  end 
+end -->
 
-<%= f.fields_for :ingredients, recipe.ingredients.build do |ingredients_fields| %>
-  <%= ingredients_fields.label "New Ingredient:  " %>
-  <%= ingredients_fields.text_field :name, placeholder: "Ingredient Name" %>  -  
-  <%= ingredients_fields.fields_for :recipe_ingredients, recipe.recipe_ingredients.build do |recipe_ingredient| %>
-    <%= recipe_ingredient.text_field :quantity, :placeholder => "Quantity" %>  -  
-    <%= recipe_ingredient.text_field :preparation, :placeholder => "Preparation" %><br>
-  <% end %>
-<% end %>
+<p>New Ingredients</p>
+  <div>
+    <%= f.fields_for :ingredients, recipe_new_or_edit(recipe) do |ingredients_fields| %>
+      <p>
+        <%= ingredients_fields.text_field :name, placeholder: "Ingredient Name" %>  -  
+        <%= ingredients_fields.fields_for :recipe_ingredients, recipe_ingredient_new_or_edit(recipe, ingredients_fields.object) do |recipe_ingredient| %>
+          <%= recipe_ingredient.text_field :quantity, :placeholder => "Quantity" %>  -  
+          <%= recipe_ingredient.text_field :preparation, :placeholder => "Preparation" %>
+        <% end %>
+      </p>
+    <% end %>
+  </div>
+
