--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,9 +1,13 @@
 <%= form_for([@user, @recipe]) do |f| %>
   <%= f.hidden_field :user_id %>
-  <%= f.label :title%><br>
-  <%= f.text_field :title%><br>
-  <%= f.label "Approximate Cook Time (min)"%><br>
-  <%= f.number_field :time %><br><br>
+  <div>
+    <%= f.label :title%>
+    <%= f.text_field :title%>
+  </div>
+  <div>
+    <%= f.label "Approximate Cook Time (min)"%>
+    <%= f.number_field :time %>
+  </div>
   <%= f.label :description %>
   <%= f.text_area :description, cols: 40, rows: 6 %><br><br>
   <%= f.label :directions %>
