--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
 <% else %>
 
   <%= link_to "Sign Up", new_user_path %>   -   
-  <%= link_to "Sign In", login_path %>.  -   
+  <%= link_to "Sign In", login_path %>  -   
   <%= link_to("Login via Facebook", '/auth/facebook') %>
 
 <% end %>
