rename edit link helper method

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -10,6 +10,6 @@
 </ul>
 <p> <%= @recipe.directions %></p>
 <p>
-  <%= show_edit_and_delete_buttons %>
+  <%= show_edit_link %>
   <%#= button_to "Edit", list_item_path(item.list, item), :method => "delete", :class => "destroy" %>
 </p>
