--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,9 +1,7 @@
 <%=display_user_name %>
-
- <%= form_tag("/recipes", method: "get") do %>
-    <%= select_tag "ingredient", options_from_collection_for_select(@ingredients, "id", "name"), include_blank: true %>
-    <%#= select_tag "date", options_for_select(["Today", "Old News"]), include_blank: true %>
-    <%= submit_tag "Filter" %>
-    <% end %>
-
-<%= render :partial => "recipes", :collection => @recipes, :as => :recipe %>
+<%=form_tag "/recipes", :method=> "get" do %>
+  <%= select_tag :ingredient_id, options_from_collection_for_select(@ingredients, :id, :name), :prompt => "Ingredient" %>
+  <%= select_tag :category_id, options_from_collection_for_select(@categories, :id, :name), :prompt => "Category" %>
+  <%= submit_tag "Filter" %>
+<% end %>
+<%= render :partial => "recipe", :collection => @recipes, :as => :recipe %>
