--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>NEW USER FORM</h1>
+<h1>Sign Up!</h1>
 
 <%= form_for @user do |f| %>
   <%= f.text_field :name, :placeholder => "Enter Your Name" %>
