--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,11 +1,11 @@
-  <h3><%= link_to recipe.title, user_recipe_path(recipe.user, recipe) %></h3>
-  <em>Submitted by <%= link_to recipe.user.name, user_recipes_path(recipe.user) %></em><br>
-  Approximate Cook Time: <%= recipe.time %> Min
-  <ul>
-    <% recipe.recipe_ingredients.each do |recipe_ingredient| %>
-      <li><%= recipe_ingredient.ingredient.name %> -  <%= recipe_ingredient.quantity %>  -  <%= recipe_ingredient.preparation unless nil%></li>
-    <% end %>
-  </ul>
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title"><%= link_to recipe.title, user_recipe_path(recipe.user, recipe) %></h5>
+    <h6 class="card-subtitle mb-2 text-muted">Submitted by <%= link_to recipe.user.name, user_recipes_path(recipe.user) %></h6><br>
+    <em>Approximate Cook Time: <%= recipe.time %> Min</em><br>
+    <%= recipe.description %>
+  </div>
+</div>  
   <br>
 
 
