--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -5,4 +5,6 @@
   <%#= select_tag :category_id, options_from_collection_for_select(@categories, :id, :name), :prompt => "Category" %>
   <%#= submit_tag "Filter" %>
 <%# end %>
-<%= render :partial => "recipe", :collection => @recipes, :as => :recipe %>
+<div id="recipe_cards">
+  <%= render :partial => "recipe", :collection => @recipes || "no recipes", :as => :recipe  %>
+</div>  
