--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,14 @@
+
 <h1>Sign Up!</h1>
 
-<%= form_for @user, :html => {:class => "form-group"} do |f| %>
-  <%= f.text_field :name ,:value => (@user.errors.full_messages_for(:name).first || @user.name), :html =>{:class => "field_with_errors" },  :placeholder => "Enter Your Name" %>
-  <%= f.text_field :password, :value => @user.errors.full_messages_for(:password).first, :html => {:class => "field_with_errors"}, :placeholder => "Enter Your Password" %>
+<%= form_for @user do |f| %>
+  <div class="form-group">
+    <%= f.text_field :name ,:value => (@user.errors.full_messages_for(:name).first || @user.name), :html =>{:class => " form-control field_with_errors" },  :placeholder => "Enter Your Name", :size => 30 %>
+  </div>
+  <div class="form-group">
+    <%= f.text_field :password, :value => @user.errors.full_messages_for(:password).first, :html => {:class => " form-control field_with_errors"}, :placeholder => "Enter Your Password", :size => 30 %>
+  </div>
   <%= f.submit "Create Your Account" %>
+  
 <% end %>
+
