remove styling for nav bar import nav.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
 
 $enable-flex: true;
 @import "bootstrap";
+@import "nav";
 @import "recipe";
 
 body {
@@ -36,3 +37,4 @@ div.field_with_errors {
 
   }
 }
+
