--- a/app/views/layouts/_filter.html.erb
+++ b/app/views/layouts/_filter.html.erb
@@ -1,5 +1,5 @@
 <%= tag.div :id => "filter" do %> 
-  <%=form_tag recipes_path, :method=> "get" do %>
+  <%=form_tag recipes_path, :method=> "get", :class =>"filter-menu" do %>
     <%= select_tag :ingredient_id, options_from_collection_for_select(@ingredients, :id, :name), :prompt => "Ingredient" %>
     <%= select_tag :category_id, options_from_collection_for_select(@categories, :id, :name), :prompt => "Category" %>
     <%= select_tag "order", options_for_select(filter_options), :prompt => "Reorder" %>
