--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,4 +37,12 @@ div.field_with_errors {
 
   }
 }
+.filter-menu {
+  display:flex;
+  flex-flow: row wrap;
+  align-content: flex-start;
+  flex: none;
+  justify-content: space-aroundx;
+  align-content: space-around;
+}
 
