--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,9 +1,12 @@
 <div class="card">
   <div class="card-body">
     <h5 class="card-title"><%= link_to recipe.title, user_recipe_path(recipe.user, recipe) %></h5>
-    <h6 class="card-subtitle mb-2 text-muted">Submitted by <%= link_to recipe.user.name, user_recipes_path(recipe.user) %></h6><br>
+    <h6 class="card-subtitle mb-2 text-muted">Submitted by <%= link_to recipe.user.name, user_recipes_path(recipe.user) %></h6>
     <em>Approximate Cook Time: <%= recipe.time %> Min</em><br>
     <%= recipe.description %>
+    <div class="category-tag">
+      <%= render :partial => "categories/categories", :collection => recipe.categories, :as => :category %>
+    </div>
   </div>
 </div>  
   <br>
