add styling to h5 and .card_title to add remove spacing at bottom of recipe name link

--- a/app/assets/stylesheets/recipe.scss
+++ b/app/assets/stylesheets/recipe.scss
@@ -21,3 +21,18 @@
 .card-body{
   padding: 1rem;
 }
+
+h5 {
+  margin-bottom: 0;
+  .card_title {
+   margin-bottom: 0;
+ }
+}
+
+// .card-title{
+//   margin-bottom: 0;    
+// }
+
+span.category-tag {
+  font-size: .6em;
+}
