--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,10 +44,17 @@ div.field_with_errors {
 .filter-menu {
   display:flex;
   flex-flow: row wrap;
-  align-content: flex-start;
   flex: none;
   justify-content: space-around;
   align-content: space-around;
 }
 
- 
+div.category-tag {
+  font-size: .6em;
+}
+
+// div.category-check{
+//   display:flex;
+// }
+
+
