remove styling for category check boxes

--- a/app/assets/stylesheets/recipe.scss
+++ b/app/assets/stylesheets/recipe.scss
@@ -36,3 +36,8 @@ h5 {
 span.category-tag {
   font-size: .6em;
 }
+
+div.category-checkbox{
+  display:inline-block;
+  // align-content: flex-start;
+}
