add styling for no recipes collection

--- a/app/assets/stylesheets/recipe.scss
+++ b/app/assets/stylesheets/recipe.scss
@@ -53,3 +53,9 @@ div.edit-form-section{
       margin-bottom:0;
   }
 }
+div h1{
+  text-align: center;
+}
+div.no-recipes{
+  margin: 20px auto;
+}
