add helper method call for svg icon

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,5 @@
 <%= tag.nav :class => "navbar navbar-default" do %>
+<%= svg "utensils" %>
   <%= tag.div :class =>"navbar-header" do %>
     <% if current_user %>
 
