--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,9 +1,6 @@
 
 <%= render "/layouts/filter"%>
-<br>
-<div>
-  <h1><%=display_user_name %></h1>
-</div>
+  <%=display_user_name %>
 <div id="recipe_cards">
   <%= render(@recipes) || no_recipes %>
 </div>  
