--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -11,7 +11,9 @@
 <p id="js-directions"> <%= @recipe.directions %></p>
 <p>
   <%= show_edit_link %> <br>
-  <button id="js-previous">Previous Recipe</button>  
-  <br>
-  <button id="js-next">Next Recipe</button>
+  <footer>
+    <button id="js-previous">Previous Recipe</button>  
+    <br>
+    <button id="js-next">Next Recipe</button>
+  </footer>
 </p>
