rename div id containing recipes, 'recipe-cards'

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,6 +1,6 @@
 
 <%= render "/layouts/filter"%>
   <%=display_user_name %>
-<div id="recipe_cards">
+<div id="recipe-cards">
   <%= render(@recipes) || no_recipes %>
 </div>  
