add link tag to handlebars template

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,6 +1,8 @@
 <div id="recipe-body">
   <h1 id="js-recipe-title" data-recipe-id="<%= @recipe.id %>" ><%= @recipe.title %></h1> 
-  <h6 class="mb-2 text-muted" id="js-user" data-user-id="<%=@recipe.user.id%>">Submitted by <%= link_to @recipe.user.name, user_recipes_path(@recipe.user), id: "js-user-link" %></h6>
+  <h6 class="mb-2 text-muted" id="js-user" data-user-id="<%=@recipe.user.id%>">
+    Submitted by <%= link_to @recipe.user.name, user_recipes_path(@recipe.user), id: "js-user-link" %>
+  </h6>
   <p> Approximate Cook Time:  <span id="js-cook-time"><%= @recipe.time %></span>  Min </p>
   <p id="js-description"><em> <%= @recipe.description %></em></p>
   <ul>
@@ -22,22 +24,16 @@
 </p>
 
 <script id="recipe-show-template" type="text/x-handlebars-template">
-  <h1 id="js-recipe-title" data-user-id="{{id}}">{{title}}</h1> 
-  <h6 class="mb-2 text-muted" id="js-user" data-user-id="{{id}}">Submitted by 
-    <%#= link_to "{{name}}", user_recipes_path(@recipe.user), id: "js-user-link" %>
+  <h1 id="js-recipe-title" data-recipe-id="{{recipe.id}}">{{recipe.title}}</h1> 
+  <h6 class="mb-2 text-muted" id="js-user" data-user-id="{{recipe.user.id}}">Submitted by 
+    <a href="/users/{{recipe.user.id}}/recipes" id="js-user-link">{{recipe.user.name}}</a>
   </h6>
-  <p> Approximate Cook Time:  <span id="js-cook-time">{{time}}</span>  Min </p>
-  <p id="js-description"><em> {{description}}</em></p>
+  <p> Approximate Cook Time: {{recipe.time}}  Min </p>
+  <p id="js-description"><em> {{recipe.description}}</em></p>
   <ul>
-    {{#recipe_ingredients}}
+    <!-- {{#recipe_ingredients}} -->
       <li>{{name}} - {{quantity}} - {{preparation}}</li>
-    {{/recipe_ingredients}}
-    <%# @recipe.recipe_ingredients.each do |recipe_ingredient| %>
-    <!-- <li> 
-      <%#= recipe_ingredient.ingredient.name %> - <%#=recipe_ingredient.quantity %>  
-      <%#= recipe_ingredient.preparation %>
-    </li>  
-    <%# end %>-->
+    <!-- {{/recipe_ingredients}} -->
   </ul>
-  <p id="js-directions"> {{directions}}</p>
+  <p id="js-directions"> {{recipe.directions}}</p>
 </script>
